# aimi-lung-ct

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  model_performance.ipynb  pyproject.toml  run_on_idc_data.ipynb
app/: default.yml
app/src/: bamf_nnunet_inference.py  converter_utils.py  fix_dicom.py  io_utils.py  lung_processor.py  run.py
qa-results/: qa-results.csv
qa-results/ai-segmentations-dcm/: ai_Lung_Dx-A0011_20090215_0.seg.dcm  ai_Lung_Dx-A0013_20090212_0.seg.dcm  ai_Lung_Dx-A0014_20080924_0.seg.dcm  ai_Lung_Dx-A0015_20090311_0.seg.dcm  ai_Lung_Dx-A0015_20090311_1.seg.dcm  ai_Lung_Dx-A0015_20090311_2.seg.dcm  ai_Lung_Dx-A0018_20080724_0.seg.dcm  ai_Lung_Dx-A0022_20071215_0.seg.dcm  ai_Lung_Dx-A0022_20071215_1.seg.dcm  ai_Lung_Dx-A0022_20081202_0.seg.dcm  ai_Lung_Dx-A0023_20090522_0.seg.dcm  ai_Lung_Dx-A0024_20081003_0.seg.dcm  ai_Lung_Dx-A0024_20081003_1.seg.dcm  ai_Lung_Dx-A0024_20081003_2.seg.dcm  ai_Lung_Dx-A0024_20081003_3.seg.dcm  ai_Lung_Dx-A0031_20090617_0.seg.dcm  ai_Lung_Dx-A0032_20080917_0.seg.dcm  ai_Lung_Dx-A0033_20080724_0.seg.dcm  ai_Lung_Dx-A0036_20090812_0.seg.dcm  ai_Lung_Dx-A0037_20090729_0.seg.dcm  ai_Lung_Dx-A0038_20090730_0.seg.dcm  ai_Lung_Dx-A0038_20090730_1.seg.dcm  ai_Lung_Dx-A0038_20090730_2.seg.dcm  ai_Lung_Dx-A0038_20090730_3.seg.dcm  ai_Lung_Dx-A0038_20090730_4.seg.dcm  ai_Lung_Dx-A0039_20090701_0.seg.dcm  ai_Lung_Dx-A0040_20090618_1.seg.dcm  ai_Lung_Dx-A0041_20090424_0.seg.dcm  ai_Lung_Dx-A0042_20090503_0.seg.dcm  ai_Lung_Dx-A0045_20080717_0.seg.dcm  ai_Lung_Dx-A0045_20080717_1.seg.dcm  (+190 more)
(+40 files in other folders)
