[tool.poetry]
name = "aimi-lung-ct"
version = "0.1.0"
description = ""
authors = ["Jeff VanOss <jeff.vanoss@bamfhealth.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ipykernel = "^6.25.2"
simpleitk = "^2.3.0"
pydicom = "^2.4.3"
requests = "^2.31.0"
seaborn = "^0.12.2"
pydicom-seg = "^0.4.1"
scikit-learn = "^1.3.1"
segmentationmetrics = "^1.0.1"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py310']

[tool.mypy]
implicit_optional = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
